Fix profile pic on mobile

--- a/_assets/stylesheets/modules/_about.scss
+++ b/_assets/stylesheets/modules/_about.scss
@@ -10,9 +10,9 @@
 }
 
 .profile-pic {
-  height: 460px;
+  max-height: 460px;
   overflow: hidden;
   img {
-    margin: -100px 0 0 0;
+    margin: -18% 0 0 0;
   }
 }
